Fix ugly wrapping.

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -85,7 +85,7 @@ limitations under the License.
       {{#if customApp}}
         <h2>Want to upload your own apps?</h2>
 
-        <p>Free-plan users can only install <a href="https://apps.sandstorm.io/?host={{origin}}" target="_blank">apps from Sandstorm.io</a>.<br>
+        <p class="wider">Free-plan users can only install <a href="https://apps.sandstorm.io/?host={{origin}}" target="_blank">apps from Sandstorm.io</a>.
           If you'd like to upload custom apps, please upgrade your plan.</p>
       {{else}}
         <h2>Looks like you've run out of
