Still not crashing

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -203,7 +203,7 @@ limitations under the License.
               <div style="width: {{renderPercent used.storage plan.storage}}%"></div>
             </div>
             <div class="used"><span class="amount">{{renderStoragePrecise used.storage}}</span> used</div>
-            <div class="total"><span class="amount">{{renderStorage plan.storage}}</span> total</div>
+            <div class="total"><span class="amount">{{renderStorage plan.storage user.referralBonus.storage}}</span> total</div>
           </td>
         </tr>
         <tr>
