Calculate visual width of storage progress bar correctly

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -201,7 +201,7 @@ limitations under the License.
           <td>Storage</td>
           <td>
             <div class="progress-bar">
-              <div style="width: {{renderPercent used.storage}}%"></div>
+              <div style="width: {{renderPercent used.storage plan.storage referralBonus.storage}}%"></div>
             </div>
             <div class="used"><span class="amount">{{renderStoragePrecise used.storage}}</span> used</div>
             <div class="total"><span class="amount">{{renderStorage plan.storage referralBonus.storage}}</span> total</div>
