--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -190,12 +190,20 @@ limitations under the License.
         <a href="https://blog.sandstorm.io/news/2015-01-14-compute-units.html" target="_blank">
         Learn more about compute units »</a></p>
     </div><div class="answer">
-      <h4>What if I'm not ready to upgrade?</h4>
+      {{#if planChosen}}
+        <h4>What if I'm not ready to upgrade?</h4>
 
-      <p>If you run out of space, you'll need to delete one of your existing grains before you can
-        create a new one. Open a grain and click <span class="trash">the delete button</span> in
-        the top bar. Or, since Sandstorm is Open Source you can
-        <a href="https://sandstorm.io/install/" target="_blank">install your own server »</a></p>
+        <p>If you run out of space, you'll need to delete one of your existing grains before you can
+          create a new one. Open a grain and click <span class="trash">the delete button</span> in
+          the top bar. Or, since Sandstorm is Open Source you can
+          <a href="https://sandstorm.io/install/" target="_blank">install your own server »</a></p>
+      {{else}}
+        <h4>Which plan should I choose?</h4>
+
+        <p>If you're not sure which plan to choose, start with the free plan. You can always
+          upgrade later. Also remember than Sandstorm is Open Source, so you can
+          <a href="https://sandstorm.io/install/" target="_blank">install your own server »</a></p>
+      {{/if}}
     </div>
 
     <a class="button" href="mailto:support@sandstorm.io" target="_blank">Contact Support</a>
