--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -310,3 +310,13 @@ All Rights Reserved
     {{/if}}
   {{/if}}
 </template>
+
+<template name="mailingListBonusNotification">
+  Subscribe to our announcement list and get {{renderStorage MAILING_LIST_BONUS}} bonus storage
+  (1-2 emails per month).
+</template>
+
+<template name="mailingListBonusNotificationButtons">
+  <button class="cancel-notification">No thanks</button>
+  <button class="accept-notification">Subscribe</button>
+</template>
