--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -312,8 +312,8 @@ All Rights Reserved
 </template>
 
 <template name="mailingListBonusNotification">
-  Subscribe to our announcement list and get {{renderStorage MAILING_LIST_BONUS}} bonus storage
-  (1-2 emails per month).
+  Subscribe to our announcement list and get <strong>{{renderStorage MAILING_LIST_BONUS}} bonus
+  storage</strong> (1-2 emails per month).
 </template>
 
 <template name="mailingListBonusNotificationButtons">
