Move referral program & mailing list into "Free stuff" section
This requires https://github.com/sandstorm-io/sandstorm/pull/1546
for it to look good.

Close #23

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -274,13 +274,26 @@ All Rights Reserved
         </tr>
         {{/if}}
       </table>
+
+      <div class="free-stuff-section-header">
+        <strong>Get free storage{{#unless isPaid}} &amp; unlimited grains{{/unless}}:</strong>
+      </div>
       {{#unless mailingListBonus.storage}}
-        <div class="subscribe-prompt">
-          <p>Get <strong>{{renderStorage MAILING_LIST_BONUS}} bonus storage</strong> by subscribing
-            to e-mail announcements (1-2 messages per month):</p>
-          <p><button class="subscribe">Subscribe</button></p>
-        </div>
+      <div class="free-stuff">
+        <p>Get <strong>{{renderStorage MAILING_LIST_BONUS}} bonus storage</strong> by subscribing
+          to e-mail announcements (1-2 messages per month):</p>
+        <button class="subscribe">Subscribe</button>
+      </div>
       {{/unless}}
+      <div class="free-stuff">
+        {{#if isPaid}}
+        <p>Get up to <span class="reward-amount">30 GB</span> of free space when your friends share on Oasis!</p>
+        {{else}}
+        <p>Get <span class="reward-amount">unlimited grains</span> &amp; up to <span class="reward-amount">2 GB</span> of free space when
+          your friends share on Oasis!</p>
+        {{/if}}
+        <a href="{{pathFor 'referrals'}}" class="like-a-button">Learn more</a>
+      </div>
     {{/if}}{{/with}}
   </div>
 
