Tweak text, per @neynah suggestions

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -281,7 +281,7 @@ All Rights Reserved
       {{#unless mailingListBonus.storage}}
       <div class="free-stuff">
         <p>Get <strong>{{renderStorage MAILING_LIST_BONUS}} bonus storage</strong> by subscribing
-          to e-mail announcements (1-2 messages per month):</p>
+          to announcements (1-2 emails per month):</p>
         <button class="subscribe">Subscribe</button>
       </div>
       {{/unless}}
@@ -289,8 +289,7 @@ All Rights Reserved
         {{#if isPaid}}
         <p>Get up to <span class="reward-amount">30 GB</span> of free space when your friends share on Oasis!</p>
         {{else}}
-        <p>Get <span class="reward-amount">unlimited grains</span> &amp; up to <span class="reward-amount">2 GB</span> of free space when
-          your friends share on Oasis!</p>
+        <p>Get up to <span class="reward-amount">2 GB bonus storage</span> and <span class="reward-amount">unlimited grains</span> by sharing with your friends on Oasis!</p>
         {{/if}}
         <a href="{{pathFor 'referrals'}}" class="like-a-button">Learn more</a>
       </div>
