Use h4 instead of silly bold, thanks @kentonv

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -213,7 +213,7 @@ All Rights Reserved
           </td>
         </tr>
         <tr>
-          <td colspan="2"><strong>Usage (based on current plan):</strong></td>
+          <td colspan="2"><h4>Usage (based on current plan):</h4></td>
         </tr>
         <tr>
           <td>Compute Units</td>
@@ -275,9 +275,7 @@ All Rights Reserved
         {{/if}}
       </table>
 
-      <div class="free-stuff-section-header">
-        <strong>Get free storage{{#unless isPaid}} &amp; unlimited grains{{/unless}}:</strong>
-      </div>
+      <h4 class="free-stuff-section-header">Get free storage{{#unless isPaid}} &amp; unlimited grains{{/unless}}:</h4>
       {{#unless mailingListBonus.storage}}
       <div class="free-stuff">
         <p>Get <strong>{{renderStorage MAILING_LIST_BONUS}} bonus storage</strong> by subscribing
