Link to grainlist and trash in billing prompt.

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -181,9 +181,10 @@ All Rights Reserved
       {{#if planChosen}}
         <h4>What if I'm not ready to upgrade?</h4>
 
-        <p>If you run out of space, you'll need to delete one of your existing grains before you can
-          create a new one. Open a grain and click <span class="trash">the delete button</span> in
-          the top bar. Or, since Sandstorm is Open Source you can
+        <p>If you run out of space, you'll need to permanently delete one of your existing grains
+          before you can create a new one. <a href="/grain">Go to your grain list »</a> to move grains
+          to the <a href="/grain#trash">trash</a>, where you can permanently delete them. Or, since
+          Sandstorm is Open Source you can
           <a href="https://sandstorm.io/install/" target="_blank">install your own server »</a></p>
       {{else}}
         <h4>Which plan should I choose?</h4>
