Introduce private payments API.
This will allow the feature key tool to accept payments via our existing payment infrastructure.

In order to accept payments, the grain must first request a PaymentAcceptor. Only admins can grant this. This prevents rogue apps from using this API (even though the only thing they could do with it anyway is cause people to pay *us*.)

To accept a payment from a user, the app requests a PaymentSource -- i.e. a credit card. The user can choose one from their account or add a new one on the spot.

--- a/shell/packages/blackrock-payments/checkout.html
+++ b/shell/packages/blackrock-payments/checkout.html
@@ -28,18 +28,24 @@
           }
         });
 
-        window.addEventListener("message", function (ev) {
-          if (ev && ev.data && ev.data.openDialog) {
+        if (data.openNow) {
+          delete data.openNow;
+          handler.open(data);
+        } else {
+          // Wait for instructions.
+          window.addEventListener("message", function (ev) {
+            if (ev && ev.data && ev.data.openDialog) {
+              window.parent.postMessage({id: data.id, showPrompt: true, plan: data.planName}, "*");
+              handler.open(data);
+            }
+          }, false);
+
+          document.querySelector("div").addEventListener("click", function () {
+            // TODO(soon): show user error if invalid plan specified
             window.parent.postMessage({id: data.id, showPrompt: true, plan: data.planName}, "*");
             handler.open(data);
-          }
-        }, false);
-
-        document.querySelector("div").addEventListener("click", function () {
-          // TODO(soon): show user error if invalid plan specified
-          window.parent.postMessage({id: data.id, showPrompt: true, plan: data.planName}, "*");
-          handler.open(data);
-        });
+          });
+        }
       })();
     </script>
   </body>
