--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -138,10 +138,6 @@ All Rights Reserved
             <p>Storage</p>
           </td></tr>
           <tr><td>
-            <p>{{computeLabel}}</p>
-            <p>Memory - {{renderCu compute}}CU*</p>
-          </td></tr>
-          <tr><td>
             <p>{{renderQuantity grains}}</p>
             <p># of Grains</p>
           </td></tr>
@@ -172,10 +168,15 @@ All Rights Reserved
 
     <div class="answers">
       <div class="answer">
-        <h4>*What is a compute unit?</h4>
+        <h4>All about grains</h4>
 
-        <p>A compute unit is 1GB of RAM used for one hour. Sandstorm apps only use RAM while
-          you are actively using them, so 200 CU should be plenty for most users.
+        <p>A grain is a document, chat room, mail box, notebook, blog, or anything else you create. A 5-grain limit applies to accounts on the Free plan.</p>
+
+        <h4>Resource limits</h4>
+
+        <p>Sandstorm apps only use RAM while you are using them. Sandstorm uses compute units as a
+          measurement of sustained RAM usage over a month. Basic and Power User plans come with 600
+          compute units, which is more than most users need. Free plans come with 20 compute units.
           <a href="https://blog.sandstorm.io/news/2015-01-14-compute-units.html" target="_blank">
           Learn more about compute units »</a></p>
       </div>
