Indicate under 'My Plan' if the plan is pending cancelation.

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -214,8 +214,11 @@ All Rights Reserved
       <table>
         <tr>
           <td>Current Plan:</td>
-          <td>
+          <td class="current-plan">
             <span class="plan-name">{{planTitle plan}}</span>
+            {{#with myPlanEnds}}
+              <span class="plan-ends">(canceled; ends {{.}})</span>
+            {{/with}}
             <button class="change-plan">Change plan</button>
           </td>
         </tr>
