Remore more 'free during beta' claims.

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -131,10 +131,10 @@ All Rights Reserved
           <tr><td>
             {{#if price}}
               <p>${{renderDollars price}}</p>
-              <p>/ month<br>{{#if OUT_OF_BETA}}&nbsp;{{else}}(FREE during beta){{/if}}</p>
+              <p>/ month</p>
             {{else}}
               <p>FREE</p>
-              <p>&nbsp;<br>&nbsp;</p>
+              <p>&nbsp;</p>
             {{/if}}
           </td></tr>
           <tr><td>
