Fix demo login prompt.

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -68,7 +68,7 @@ All Rights Reserved
 
     {{/if}}
     <div class="login">
-      {{> loginButtonsDialog accountsUi}}
+      {{> loginButtonsDialog accountsUi=accountsUi}}
     </div>
 
     <p class="alternatives">
